# ads-ranking-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: aliccp_sample.json  benchmark.json  default.json  spark_features.json
docs/: big_data_workflow.md  decision_log.md  project_explanation.md  runbook.md  sql_feature_examples.sql
scripts/: benchmark_inference.py  run_aliccp_sample.py  run_demo.py  run_experiments.py  run_feature_ablation.py  spark_build_features.py
src/ads_ranking/: __init__.py  calibration.py  data.py  evaluation.py  experiments.py  features.py  train.py
src/ads_ranking/bigdata/: __init__.py  spark_features.py  spark_session.py
src/ads_ranking/datasets/: __init__.py  aliccp.py  real_world.py  synthetic.py
src/ads_ranking/models/: __init__.py  tabular.py
src/ads_ranking/ranking/: __init__.py  auction.py
