[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ads-ranking-pipeline"
version = "0.1.0"
description = "End-to-end ads ranking pipeline for CTR/CVR prediction and auction-aware ranking."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "pyspark>=3.5",
  "pyarrow>=15.0"
]

[tool.setuptools.packages.find]
where = ["src"]
